--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>vedio player</title>
+    <title>My first page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,9 +21,9 @@
     <h3>This is my very first website, and I am so proud to see it come to life. Every line of code I wrote felt like a small step toward something big. Building this site was not just about learning HTML or CSS, but about creating something I can call my own. It’s a dream come true, a small beginning that will lead to bigger things. I know this is just the start of my journey, but today, I am truly happy.
     </h3>
     <h3 id="special"><b>"With dreams in my heart and code in my hands,</b></h3>
-    <h3 id="special"><b><br>I built a world where my ideas stand.</b></h3>
-    <h3 id="special"><b><br>From lines of code to colors bright</b></h3>
-    <h3 id="special"><b><br>I shaped a vision, brought it to light."</b></h3>
+    <h3 id="special"><b>I built a world where my ideas stand.</h3>
+    <h3 id="special"><b>From lines of code to colors bright</h3>
+    <h3 id="special"><b>I shaped a vision, brought it to light."</h3>
 
     
     
